--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -303,7 +303,7 @@ function convertBool(b) {
    </div>
     <div style="width:74px; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
-        <input id="clock" type="text" class="form-control" name="t" placeholder="Set Time" style="color: white; cursor: pointer;" onfocus="this.blur()" readonly>
+        <input id="clock" type="text" class="form-control" name="t" placeholder="Set Time," style="color: white; cursor: pointer;" onfocus="this.blur()" readonly>
       </div>
     </div>
 
@@ -312,7 +312,7 @@ function convertBool(b) {
 <!--       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <img src="{% static 'classes/images/weekicon.png'%}" alt="Day of Week" style="width:20px;">
       </button> -->
-      <input id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" type="text" class="form-control" name="t" placeholder="&#xe109;" style="color: white; cursor: pointer;" readonly>
+      <input id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" type="text" class="form-control" name="t" placeholder="Date" style="color: white; cursor: pointer;" readonly>
     <div id="dropdown-menu" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <label class="switch">
           <input id = "M" name = "M" value = "M" type="checkbox">
