--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -528,6 +528,7 @@ toggle between hiding and showing the dropdown content */
     // Adds different layer groups
     var printers = L.layerGroup();
     var hotspots = L.layerGroup();
+    var waterspots = L.layerGroup();
     var laundry = L.layerGroup();
     var buildings = L.layerGroup();
 
