--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -613,7 +613,8 @@ mymap.locate({setView: true, maxZoom: 15});
       "Printers": printers,
       "Laundry": laundry,
       "Hotspots": hotspots,
-      "Buildings": buildings
+      "Buildings": buildings,
+      "Water": waterspots
     };
     // Adds overlays and layers to map
     L.control.layers(baseLayers, overlays, {position: 'bottomright', collapsed: collapse}).addTo(map);
