--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -238,9 +238,10 @@
       float: none;
     }
     .col-xs-4 {
-      width: 270px;
-      color: white;
+      width: 200px;
+      color: black;
       font-size: small;
+      background: white;
     }
   </style>
 </head>
