--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -551,6 +551,12 @@ toggle between hiding and showing the dropdown content */
        iconAnchor:   [13, 13], // point of the icon which will correspond to marker's location
        popupAnchor:  [0, 0] // point from which the popup should open relative to the iconAnchor
      });
+     var waterIcon = L.icon({
+       iconUrl: "{% static 'classes/images/watericon.png' %}",
+       iconSize:     [26, 26], // size of the icon
+       iconAnchor:   [13, 13], // point of the icon which will correspond to marker's location
+       popupAnchor:  [0, 0] // point from which the popup should open relative to the iconAnchor
+     });
      var savedIcon = L.icon({
        iconUrl: "{% static 'classes/images/marker-icon-green.png' %}",
        iconAnchor:   [12, 41], // point of the icon which will correspond to marker's location
@@ -579,7 +585,7 @@ toggle between hiding and showing the dropdown content */
 
  for (var i = 0; i < waterLocs.length; i++) {
   //if (hi[i][3] == '6' || hi[i][3] == '29')
-    L.marker(waterLocs[i][0], {title: waterLocs[i][1], icon: hotspotIcon}).bindPopup(waterLocs[i][1]).addTo(waterspots);
+    L.marker(waterLocs[i][0], {title: waterLocs[i][1], icon: waterIcon}).bindPopup(waterLocs[i][1]).addTo(waterspots);
  }
     // URLS of maps for different layers (note: need to add attributes)
     var mbAttr = 'Map data &copy; <a href="https://openstreetmap.org">OpenStreetMap</a> contributors, ' +
