--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -191,7 +191,9 @@
       cursor: pointer;
     }
     .listText {
-      color: white;
+      background-color: #d3d3d3;
+      color: black;
+      padding: 10px;
     }
     .listTitle {
       color: white;
