--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -191,9 +191,7 @@
       cursor: pointer;
     }
     .listText {
-      background-color: #d3d3d3;
-      color: black;
-      padding: 10px;
+      color: white;
     }
     .listTitle {
       color: white;
