--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -583,7 +583,7 @@ toggle between hiding and showing the dropdown content */
 
  for (var i = 0; i < waterLocs.length; i++) {
   //if (hi[i][3] == '6' || hi[i][3] == '29')
-    L.marker(waterLocs[i][0], {title: waterLocs[i][1], icon: waterIcon}).bindPopup(waterLocs[i][1]).addTo(waterspots);
+    L.marker(waterLocs[i][0], {title: waterLocs[i][1], icon: hotspotIcon}).bindPopup(waterLocs[i][1]).addTo(waterspots);
  }
     // URLS of maps for different layers (note: need to add attributes)
     var mbAttr = 'Map data &copy; <a href="https://openstreetmap.org">OpenStreetMap</a> contributors, ' +
