--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -238,8 +238,11 @@
       float: none;
     }
     .col-xs-4 {
-      width: 200px;
+      width: 270px;
       font-size: small;
+      background-color: #d3d3d3;
+      color: black;
+      padding: 10px;
     }
   </style>
 </head>
