add back search button

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -345,7 +345,7 @@ function convertBool(b) {
    </div>
 
     <div style="float:left; padding-right: 10px;">
-      <button class="btn btn-success" type="submit" style="display:none">
+      <button class="btn btn-success" type="submit">
         <i class="fa fa-search"></i>Search ClassMaps
       </button>
     </div>
