Changed name of water

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -621,7 +621,7 @@ mymap.locate({setView: true, maxZoom: 15});
       "Printers": printers,
       "Laundry": laundry,
       "Hotspots": hotspots,
-      "Filtered Water": waterspots,
+      "Good Water": waterspots,
       "Buildings": buildings
     };
     // Adds overlays and layers to map
