--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -213,6 +213,8 @@
     /* Search result overlay */
     .resultsContainer {
       padding-top: 85px;
+      padding-left:10px;
+      padding-right:10px;
     }
     .resultsOverlay {
       height: auto;
