got rid of good water

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -623,7 +623,7 @@ mymap.locate({setView: true, maxZoom: 15});
       "Printers": printers,
       "Laundry": laundry,
       "Hotspots": hotspots,
-      "Good Water": waterspots,
+      "Water": waterspots,
       "Buildings": buildings
     };
     // Adds overlays and layers to map
