--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -620,7 +620,7 @@ mymap.locate({setView: true, maxZoom: 15});
     };
     // Our overlays
     var overlays = {
-      " Printers": printers,
+      "&nbspPrinters": printers,
       " Laundry": laundry,
       " Hotspots": hotspots,
       " Water": waterspots,
