--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -240,11 +240,14 @@
       float: none;
     }
     .col-xs-4 {
-      width: 270px;
+      width: 220px;
       font-size: small;
       background-color: #d3d3d3;
       color: black;
-      padding: 10px;
+      padding-left: 10px;
+      padding-right: 10px;
+     padding-top: 40px;
+      padding-bottom: 40px;
     }
   </style>
 </head>
