--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -615,8 +615,8 @@ mymap.locate({setView: true, maxZoom: 15});
     //var control = new L.Control.Bookmarks().addTo(map);
     // Our different layers
     var baseLayers = {
-      "Regular": regular,
-      "Satellite": satellite
+      "&nbspRegular": regular,
+      "&nbspSatellite": satellite
     };
     // Our overlays
     var overlays = {
