--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -225,7 +225,7 @@
       z-index: 6;
       padding-top: 1%;
       padding-bottom: 0.5%;
-      background-color:rgba(0,0,0,0.6); // Sets to 50% transparent;
+      background-color:0; // Sets to 50% transparent;
       pointer-events: auto;
     }
     /* Horizontal Scroll */
@@ -248,6 +248,19 @@
       padding-right: 10px;
      padding-top: 40px;
       padding-bottom: 40px;
+    }
+    .card {
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      transition: 0.3s;
+      width: 40%;
+      border-radius: 5px;
+    }
+
+    .card:hover {
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    }
+    .container {
+        padding: 2px 16px;
     }
   </style>
 </head>
