--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -425,7 +425,9 @@ function truncate(line) {
 }
 
 function addCourseRow(id, text) {
-  $("#"+id).append("<div class=\"col-xs-4\">"+text+"</div>");
+//   $("#"+id).append("<div class=\"col-xs-4\">"+text+"</div>");
+  $("#"+id).append("<div class=\"card\">"+"<div class=\"container\">"+
+    "<p>"+text"</p>"+"</div>"+"</div>");
 }
 
 {% if buildings or classes %}
