--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -427,7 +427,7 @@ function truncate(line) {
 function addCourseRow(id, text) {
 //   $("#"+id).append("<div class=\"col-xs-4\">"+text+"</div>");
   $("#"+id).append("<div class=\"card\">"+"<div class=\"container\">"+
-    "<p>"+text"</p>"+"</div>"+"</div>");
+    "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 
 {% if buildings or classes %}
