--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -254,8 +254,9 @@
       transition: 0.3s;
       width: 230px;
       border-radius: 5px;
+      padding-top: 30px;
+      padding-bottom: 30px;
     }
-
     .card:hover {
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     }
