--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -235,7 +235,7 @@
       padding-left: 0.5%;
       padding-right: 0.5%;
     }
-    .match-group > .row > .col-xs-4 {
+    .match-group > .row > .card {
       display: inline-block;
       float: none;
     }
