--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -232,8 +232,8 @@
     .match-group > .row {
       overflow-x: auto;
       white-space: nowrap;
-      padding-left: 0.5%;
-      padding-right: 0.5%;
+      padding-left: 10px;
+      padding-right: 10px;
     }
     .match-group > .row > .card {
       display: inline-block;
@@ -252,7 +252,7 @@
     .card {
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       transition: 0.3s;
-      width: 230px;
+      width: 170px;
       border-radius: 5px;
       padding-top: 30px;
       padding-bottom: 30px;
