--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -256,6 +256,7 @@
       border-radius: 5px;
       padding-top: 30px;
       padding-bottom: 30px;
+      margin-right: 10px;
     }
     .card:hover {
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
