--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -214,7 +214,7 @@
     }
     /* Search result overlay */
     .resultsContainer {
-      padding-top: 75px;
+      padding-top: 65px;
     }
     .resultsOverlay {
       height: auto;
@@ -256,7 +256,7 @@
       border-radius: 5px;
       padding-top: 30px;
       padding-bottom: 30px;
-      margin-right: 7px;
+      margin-right: 6px;
     }
     .card:hover {
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -456,7 +456,8 @@ function addCourseRow(id, text) {
 
 {% if classes %}
     {% for c in classes %}
-      var formatted = truncateTitle("{{c}} {{c.section}}")+"<br>"+truncate("{{c.title}}");
+//       var formatted = truncateTitle("{{c}} {{c.section}}")+"<br>"+truncate("{{c.title}}");
+    var formatted = truncateTitle("{{c}} {{c.section}}")+"<br>"+"{{c.title}}";
       addCourseRow("courses", "<a href=\"/courses/{{c.pk}}\" style=\"color: black;\">"+formatted);
     {% endfor %}
 {% endif %}
