--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -254,9 +254,8 @@
       transition: 0.3s;
       width: 170px;
       border-radius: 5px;
-      padding-top: 30px;
-      padding-bottom: 30px;
       margin-right: 6px;
+      height: 80px:
     }
     .card:hover {
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
