--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -402,7 +402,7 @@ function convertBool(b) {
 <div id="resultsContainer" class="resultsContainer" style="display: none;">
   <div id="resultsOverlay" class="resultsOverlay" style="overflow: auto;">
     <div class="container match-group">
-      <div id="buildings" class="row text-center">
+      <div id="buildings" class="row text-center" style="margin: 0;">
 
       </div>
     </div>
