--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -400,10 +400,10 @@ function convertBool(b) {
 </div>
 
 <!--  Code search result overlay -->
-<div id="resultsContainer" class="resultsContainer" style="display: none; margin: 0; padding: 0;">
-  <div id="resultsOverlay" class="resultsOverlay" style="overflow: auto; margin: 0; padding: 0;">
-    <div class="container match-group" style="margin: 0; padding: 0;">
-      <div id="buildings" class="row text-center" style="margin: 0; padding: 0;">
+<div id="resultsContainer" class="resultsContainer" style="display: none;">
+  <div id="resultsOverlay" class="resultsOverlay" style="overflow: auto;">
+    <div class="container match-group" style="margin: 0;">
+      <div id="buildings" class="row text-center" style="margin: 0;">
 
       </div>
     </div>
