--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -237,7 +237,7 @@
     }
     .match-group > .row > .card {
       display: inline-block;
-      float: left;
+      float: none;
     }
     .col-xs-4 {
       width: 190px;
