--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -96,6 +96,7 @@
     /* Show the dropdown menu on hover */
     .dropdown:hover .dropdown-content {
         display: block;
+        z-index: 7;
     }
     /* Change the background color of the dropdown button when the dropdown content is shown */
     .dropdown:hover .dropbtn {
