--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -227,7 +227,7 @@
       z-index: 3;
       padding-top: 1%;
       padding-bottom: 0.5%;
-      background-color:0; // Sets to 50% transparent;
+      background-color: black;
       pointer-events: auto;
     }
     /* Horizontal Scroll */
