--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -224,10 +224,10 @@
       margin-left: -100%;
       position: relative;
       float: right;
-      z-index: 3;
+      z-index: -10;
       padding-top: 1%;
       padding-bottom: 0.5%;
-      background-color: black;
+      background-color: 0;
       pointer-events: auto;
     }
     /* Horizontal Scroll */
