--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -59,7 +59,7 @@
           
         : 1;
           position: relative;
-          z-index: -10;
+          z-index: 0;
       }
     ::-webkit-scrollbar {
         display: none;
@@ -82,7 +82,6 @@
       float: right;
       z-index: 1;
       padding-top: 1%;
-      padding-bottom: 0.5%;
       padding-right: 40px;
       padding-left: 10px;
       background-color:rgba(0,0,0,0.6); // Sets to 50% transparent;
@@ -224,7 +223,7 @@
       margin-left: -100%;
       position: relative;
       float: right;
-      z-index: -3;
+      z-index: 0;
       padding-top: 1%;
       padding-bottom: 0.5%;
       background-color: 0;
@@ -672,7 +671,7 @@ L.easyButton('<img src="{% static 'classes/images/currentloc.png' %}" style="wid
     map.locate({
         setView: true,
         maxZoom: 18
-    });
+    }, 'hello');
 
     //map.locate({setView: true,watch: true, maxZoom: 16});
     function onLocationFound(e) {
@@ -682,7 +681,7 @@ L.easyButton('<img src="{% static 'classes/images/currentloc.png' %}" style="wid
     L.circle(e.latlng, radius).addTo(map);
     }
     map.on('locationfound', onLocationFound);
-}, 'hello').setPosition('bottomright').addTo(map);
+}).setPosition('bottomright').addTo(map);
 
 L.easyButton('<img src="{% static 'classes/images/refresh.png' %}" style="width:16px">', function(btn, map){
     map.setView(new L.LatLng(40.346825, -74.656595), 16);
