--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -681,12 +681,12 @@ L.easyButton('<img src="{% static 'classes/images/currentloc.png' %}" style="wid
     L.circle(e.latlng, radius).addTo(map);
     }
     map.on('locationfound', onLocationFound);
-}, 'hellooo').setPosition('bottomright').addTo(map);
+}, 'Current location').setPosition('bottomright').addTo(map);
 
 L.easyButton('<img src="{% static 'classes/images/refresh.png' %}" style="width:16px">', function(btn, map){
     map.setView(new L.LatLng(40.346825, -74.656595), 16);
 //map.setView(        [40.347, -74.653],      zoom: 16);
-}).setPosition('bottomright').addTo(map);
+}, 'Reset map').setPosition('bottomright').addTo(map);
 
 L.easyButton('<img src="{% static 'classes/images/star.png' %}" style="width:16px">', function(btn, map){
     var x = document.getElementById("listOverlay");
@@ -695,7 +695,7 @@ L.easyButton('<img src="{% static 'classes/images/star.png' %}" style="width:16p
     } else {
         x.style.display = "none";
     }
-}).setPosition('bottomright').addTo(map);
+}, 'Toggle favorites').setPosition('bottomright').addTo(map);
     // Limits zoom (we could get rid of this)
   map.options.minZoom = 14;
   map.options.maxZoom = 18;
