--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -231,7 +231,7 @@
     }
     /* Horizontal Scroll */
     .match-group > .row {
-      overflow-x: auto;
+      overflow-x: visible;
       white-space: nowrap;
       padding-left: 10px;
       padding-right: 10px;
