--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -222,7 +222,7 @@
       width: 100%;
       margin-left: -100%;
       position: relative;
-      float: right;
+      float: left;
       z-index: 0;
       padding-top: 1%;
       padding-bottom: 0.5%;
@@ -231,6 +231,7 @@
     }
     /* Horizontal Scroll */
     .match-group > .row {
+      float: left;
       overflow-x: visible;
       white-space: nowrap;
       padding-left: 10px;
