added kitchens js to html

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -22,6 +22,7 @@
   <script type="text/javascript" src="{% static 'classes/laundry.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/hotspots.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/water.js' %}"></script>
+  <script type="text/javascript" src="{% static 'classes/kitchens.js' %}"></script>
 
   <script type="text/javascript" src="{% static 'classes/assets/js/jquery.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/assets/js/bootstrap.min.js' %}"></script>
