--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -564,6 +564,7 @@ toggle between hiding and showing the dropdown content */
     var waterspots = L.layerGroup();
     var laundry = L.layerGroup();
     var buildings = L.layerGroup();
+    var kitchens = L.layerGroup();
 
      var printerIcon = L.icon({
        iconUrl: "{% static 'classes/images/printer.png' %}",
