added kitchens fixed bug

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -668,7 +668,7 @@ map.on('drag', function() {
       "&nbspLaundry": laundry,
       "&nbspHotspots": hotspots,
       "&nbspWater": waterspots,
-      "&nbspKitchens": kitchens, 
+      "&nbspKitchens": kitchenspots, 
       "&nbspBuildings": buildings
     };
     // Adds overlays and layers to map
