--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -216,7 +216,7 @@
     }
     /* Search result overlay */
     .resultsContainer {
-      padding-top: 65px;
+      padding-top: 5%;
     }
     .resultsOverlay {
       height: auto;
