--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -1,249 +1,238 @@
-<!--navbar-->
-<head>
-    <title> waitLess </title>
-    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <style type="text/css">
-        .jumbotron {
-            background: #532f8c;
-            color: white;
-            padding-bottom: 80px
-        }
-        .jumbotron .btn-primary {
-            background: #845ac7;
-            border-color: #845ac7
-        }
-        .jumbotron .btn-primary:hover {
-            background: #7646c1
-        }
-        .jumbotron p {
-            color: #d9ccee;
-            max-width: 75%;
-            margin: 1em auto 2em
-        }
-        .navbar+.jumbotron {
-            margin-top: -20px
-        }
-        .jumbotron .lang-logo {
-            display: block;
-            background: #b01302;
-            border-radius: 50%;
-            overflow: hidden;
-            width: 100px;
-            height: 100px;
-            margin: auto;
-            border: 2px solid white
-        }
-        .jumbotron .lang-logo img {
-            max-width: 100%
-        }
-    </style>
-</head>
+<!DOCTYPE html>
 
-<body>
-    <nav class="navbar navbar-default navbar-static-top navbar-inverse">
+{% load static %}
+
+<html lang="en">
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>About ClassMaps</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="{% static 'classes/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+
+    <!-- Custom fonts for this template -->
+    <link href="{% static 'classes/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+    <!-- Custom styles for this template -->
+    <link href="{% static 'classes/css/agency.min.css' %}" rel="stylesheet">
+
+  </head>
+
+  <body id="page-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <ul class="nav navbar-nav">
-            <li>
-                <a href="/"><span class="glyphicon glyphicon-home"></span> waitLess </a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">ClassMaps</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Menu
+          <i class="fa fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav text-uppercase ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#about">Timeline</a>
             </li>
-            <li class="active">
-                <a href="https://waitlessprinceton.herokuapp.com/about"><span class="glyphicon glyphicon-info-sign"></span> About </a>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#team">Team</a>
             </li>
-        </ul>  
-        <ul class="nav navbar-nav navbar-right">
-            <li class="navbar-right">
-                <a href="https://waitlessprinceton.herokuapp.com/accounts/logout/"><span class="glyphicon glyphicon-book"></span> Logout</a>
-            </li>
-        </ul>
+          </ul>
+        </div>
       </div>
     </nav>
-</body>
 
-<div class="container">
-    <style type="text/css">
-        @import 
-        url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900,900italic);
-        .heading-title h3 {
-            letter-spacing: 2px;
-            font-weight: normal;
-            text-transform: uppercase;
-        }
-        .heading-title h4 {
-            letter-spacing: 2px;
-            font-weight: normal;
-            text-transform: uppercase;
-        }
-        .text-center {
-            text-align: center;
-        }
-        .team-img {
-            margin-bottom: 10px;
-        }
-        .team-desc {
-            margin-left:30px;
-            margin-right:30px;
-        }
-    </style>
-
-    <div class="heading-title text-center">
-        <h3> About waitLess </h3>
-    </div>
-
-    <div class = "row">
-        <div class="text-center">
-            <p> Time is a Princeton student's most precious resource. We have classes, practices, rehearsals, office hours, group project meetups, study breaks, advising appointments, and obligatory naps. Often, we try to squeeze as much as we can into the few moments of free time we have in our schedules. The worst feeling is having a mere ten minutes to grab some lunch and spending eight of those minutes waiting in line for the salad bar, or thinking we have time for a quick workout between classes only to find out that there are no treadmills available. We've all been caught in these situations, so wouldn’t it be nice to know how busy these spots are before we show up? </p>
-
-            <p> waitLess utilizes prox swipe data to monitor Princeton's dining halls, cafes, Firestone Library, and Dillon Gym, and provides information about both current and future traffic, giving Princeton students the ability to truly maximize their free time. </p>
+    <!-- Header -->
+    <header class="masthead">
+      <div class="container">
+        <div class="intro-text">
+          <div class="intro-heading text-uppercase">ClassMaps</div>
         </div>
-    </div>
+      </div>
+    </header>
 
-    <br>
-
-    <div class="heading-title text-center">
-        <h3> Key Features </h3>
-    </div>
-
-    <div class="row">
-        <div class="col-sm-6 col-sm-6">
-            <div class="heading-title text-center">
-                <h4>Dynamic Coloring</h4>
-            </div>
-            <div class="team-img" style="text-align: center">
-                <img src="./static/hello/colors.png">
-            </div>
-            <div class="text-center team-desc">
-                <p> Buildings are colored based on the percentage of the total occcupancy that has swiped in during the last 30 minutes. When a space is closed, the building becomes grey. </p>
-            </div>
+    <!-- About -->
+    <section id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Timeline</h2>
+            <h3 class="section-subheading text-muted">Our Week-by-Week Progress</h3>
+          </div>
         </div>
-
-        <div class="col-sm-6 col-sm-6">
-            <div class="heading-title text-center">
-                <h4>Location Filtering</h4>
-            </div>
-            <div class="team-img" style="text-align: center">
-                <img src="./static/hello/filtering.png">
-            </div>
-            <div class="text-center team-desc">
-                <p>Choose which types of buildings you're interested in, and they'll be marked by custom icons on the map. </p>
-            </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <ul class="timeline">
+              <li>
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="{% static 'classes/img/about/1.jpg' %}" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>Week of March 26th</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Whatever was done on Week 1</p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="{% static 'classes/img/about/2.jpg' %}" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>Week of April 2nd</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Whatever was done on Week 2</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="{% static 'classes/img/about/3.jpg' %}" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>Week of April 9th</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Whatever was done on Week 3</p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="{% static 'classes/img/about/4.jpg' %}" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>Week of April 16th</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Whatever was done on Week 4</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="{% static 'classes/img/about/3.jpg' %}" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>Week of April 23rd</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Whatever was done on Week 5</p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="{% static 'classes/img/about/4.jpg' %}" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>Week of April 30th</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Whatever was done on Week 6</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="{% static 'classes/img/about/2.jpg' %}" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>Week of May 7th</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Demo Week</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
-    </div>
+      </div>
+    </section>
 
-    <div class="row">
-        <div class="col-sm-6 col-sm-6">
-            <div class="heading-title text-center">
-                <h4>Time Slider</h4>
-            </div>
-            <div class="team-img" style="text-align: center">
-                <img src="./static/hello/slider.gif">
-            </div>
-            <div class="text-center team-desc">
-                <p> The slider allows you to view traffic all over campus at different times, giving you the ability to plan your day from breakfast to midnight pset sessions. </p>
-            </div>
+    <!-- Team -->
+    <section class="bg-light" id="team">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Meet the Team!</h2>
+          </div>
         </div>
-
-        <div class="col-sm-6 col-sm-6">
-            <div class="heading-title text-center">
-                <h4>Three-Day Graphs</h4>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/team/1.jpg' %}" alt="">
+              <h4>Adrian Tong</h4>
+              <p class="text-muted">Project Manager</p>
             </div>
-            <div class="team-img" style="text-align: center">
-                <img src="./static/hello/graphs.png">
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/team/2.jpg' %}" alt="">
+              <h4>David Todd</h4>
+              <p class="text-muted">Back-End Developer</p>
             </div>
-            <div class="text-center team-desc">
-                <p>Click on a building to view a graph of its three-day traffic, and decide if you should head to Firestone to skim that book today or tomorrow. </p>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/team/3.jpg' %}" alt="">
+              <h4>Yang Song</h4>
+              <p class="text-muted">Front-End Developer</p>
             </div>
+          </div>
         </div>
-    </div>
-
-    <br>
-
-    <div class="heading-title text-center">
-        <h3> Meet the Team </h3>
-    </div>
-      
-    <div class="row">
-        <div class="col-sm-6 col-sm-6">
-            <div class="heading-title text-center">
-                <h4>Emily Hedlund</h4>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/team/1.jpg' %}" alt="">
+              <h4>Andy Lin</h4>
+              <p class="text-muted">Front-End Developer</p>
             </div>
-            <div class="team-img" style="text-align: center">
-                <img src="./static/hello/emily.jpg">
+          </div>
+          <div class="col-sm-4" >
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/team/1.jpg' %}" alt="">
+              <h4>Jerry Wei</h4>
+              <p class="text-muted">Advisor</p>
             </div>
-            <div class="text-center team-desc">
-                <p> I'm a sophomore studying Computer Science and pursuing a certificate in Statistics & Machine Learning. I'm a proud resident of Cleveland, Ohio and I was on TV when the Cavs won the NBA Championship last year. </p>
-            </div>
+          </div>
         </div>
+      </div>
+    </section>
 
-        <div class="col-sm-6 col-sm-6">
-            <div class="heading-title text-center">
-                <h4>Julie Novick-Lederer</h4>
-            </div>
-            <div class="team-img" style="text-align: center">
-                <img src="./static/hello/julie.jpg">
-            </div>
-            <div class="text-center team-desc">
-                <p>I am a junior studying Computer Science, Technology & Society, and Linguistics. I am originally from New York City, and my hobbies include playing the piano, going to hockey games, and watching standup comedy. </p>
-            </div>
-        </div>
-    </div>
+    <!-- Bootstrap core JavaScript -->
+    <script src="{% static 'classes/vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'classes/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
-    <div class="row">
-        <div class="col-sm-6 col-sm-6">
-            <div class="heading-title text-center">
-                <h4>Amy Liu</h4>
-            </div>
-            <div class="team-img" style="text-align: center">
-                <img src="./static/hello/amy.jpg">
-            </div>
-            <div class="text-center team-desc">
-                <p>I am a current sophomore at Princeton University studying Computer Science in the School of Engineering. I am originally from Princeton, New Jersey, and I am a member of the eXpressions dance group. </p>
-            </div>
-        </div>
+    <!-- Plugin JavaScript -->
+    <script src="{% static 'classes/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
 
-        <div class="col-sm-6 col-sm-6">
-            <div class="heading-title text-center">
-                <h4>Maya Phillips</h4>
-            </div>
-            <div class="team-img" style="text-align: center">
-                <img src="./static/hello/maya.jpg">
-            </div>
-            <div class="text-center team-desc">
-                <p>I am a current junior at Princeton studying Computer Science. I am originally from Columbia, Maryland, and I serve as the Chief Financial Officer of Kappa Alpha Theta, the first Greek-letter fraternity known among women. </p>
-            </div>
-        </div>
-    </div>
+    <!-- Contact form JavaScript -->
+    <script src="{% static 'classes/js/jqBootstrapValidation.js' %}"></script>
+    <script src="{% static 'classes/js/contact_me.js' %}"></script>
 
-    <br>
+    <!-- Custom scripts for this template -->
+    <script src="{% static 'classes/js/agency.min.js' %}"></script>
 
-    <div class="heading-title text-center">
-        <h3> Acknowledgements </h3>
-    </div>
+  </body>
 
-    <div class="row">
-        <div class="text-center">
-            <p> Stefanie Karp, Department of Public Safety </p>
-            <p> Smitha Haneef and Bernadette Penick, Campus Dining </p>
-            <p> Jeff Rowlands, Princeton University Library </p>
-            <p> Mollie Marcoux, Princeton Athletics </p>
-            <p> Jessica Ward, Campus Recreation </p>
-            <p> Scott Loh, Office of the Fire Marshal </p>
-            <p> Ghassen Jerfel and Brian Kernighan, Department of Computer Science </p>
-        </div>
-    </div>
-
-    <br>
-
-    <div class="heading-title text-center">
-        <h3> Contact Us </h3>
-    </div>
-
-    <div class="row">
-        <div class="text-center">
-            <p> We can be reached at <a href="mailto:waitlessprinceton@gmail.com">waitlessprinceton@gmail.com</a>.</p>
-        </div>
-    </div>
-</div>
-
-<br> <br>
+</html>
